Redmine Issue 905; PURPOSE: MediaViewer style/design; fixing the overflow for the image column on specimen details.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -266,8 +266,7 @@ div:focus, div > span:focus {
 	overflow: hidden;
 }
 .accordion >.card {
-	overflow-y: hidden; 
-	overflow-x:visible;
+	overflow: hidden; 
 }
 a {
 	color:#006ee3;/*not working for accessibility*/
